Added TODO comment

--- a/index.html
+++ b/index.html
@@ -6,3 +6,8 @@
 	<meta http-equiv="refresh" content="0; url=https://brian-pho.github.io/HTML/index.html" />
 	<link rel="canonical" href="https://brian-pho.github.io/HTML/index.html">
 </head>
+<!--
+TODO
+ - Add local testing to website project section
+ - Clearer guidelines for the project 2 paragraph structure
+-->
