Undo the 404 Changes

--- a/404.html
+++ b/404.html
@@ -2,7 +2,32 @@
 <head>
 	<title>Page Not Found</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="CSS/404.css" type="text/css" rel="stylesheet"/>
+	<style>
+	* {
+		line-height: 1.2;
+		margin: 0;
+	}
+
+	html {
+		color: grey;
+		display: table;
+		font-family: sans-serif;
+		height: 100%;
+		width: 100%;
+		text-align: center;
+	}
+
+	body {
+		display: table-cell;
+		vertical-align: middle;
+	}
+
+	h1 {
+		color: black;
+		font-size: 40px;
+		font-weight: 400;
+	}
+	</style>
 </head>
 <body>
 	<h1>Oh Noes!</h1>
