Added Github and IMDB Link

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -37,7 +37,8 @@
 		<li>Video Games (League of Legends, CS:GO, Starcraft 2)</li>
 		<li>Swimming</li>
 		<li>Binge watching TV shows and anime</li>
-		<li><a href="https://myanimelist.net/profile/Brainiac777">MyAnimeList</a><br></li>
+		<li><a href="https://myanimelist.net/profile/Brainiac777">MyAnimeList</a></li>
+		<li><a href="http://www.imdb.com/user/ur50206176/ratings?ref_=nv_usr_rt_4">IMDB</a><br></li>
 	</ul>
 	<hr>
 	<h2>Passions</h2>
