--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -26,6 +26,7 @@
 	<p>
 		<a href="https://www.facebook.com/BrianPho7">Facebook</a><br>
 		<a href="https://www.linkedin.com/in/brian-pho">LinkedIn</a><br>
+		<a href="https://github.com/Brian-Pho/">Github</a><br>
 		<a href="mailto:brian.pho@ucalgary.ca">Email</a> (brian.pho@ucalgary.ca)<br>
 	</p>
 </body>
