Updated Date and Added New Font

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -25,13 +25,13 @@
 	</header>
 	<h1>Welcome to Brian Pho's Homepage</h1>
 	<p>
-		I am a 3<sup>rd</sup> year software engineering student at the University of Calgary.
+		Hello, I am a 3<sup>rd</sup> year software engineering student at the University of Calgary.
 		This website shows the courses I have taken, projects I have been involved with, and information
 		about me.
 	</p>
 	<hr>
 	<p>
-		This website is currently hosted using Github Pages. Last Updated Dec 22, 2017.
+		This website is currently hosted using Github Pages. Last Updated Jan 1, 2018.
 	</p>
 </body>
 </html>
