--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -146,32 +146,23 @@
 			<tr>
 				<td title="Principles of Software Design">ENSF 480</td>
 				<td title="Software Architecture">SENG 401</td>
-				<td title=""></td>
-				<td title=""></td>
+				<td title="Internship in Engineering I" colspan="2">INTE 513.01</td>
 			</tr>
 			<tr>
 				<td title="Embedded System Interfacing">ENCM 511</td>
 				<td title="Software Testing, Reliability, and Quality">SENG 438</td>
-				<td title=""></td>
-				<td title=""></td>
 			</tr>
 			<tr>
 				<td title="Neuro-Fuzzy and Soft Computing">ENEL 525</td>
 				<td title="Software Requirements Engineering">SENG 471</td>
-				<td title=""></td>
-				<td title=""></td>
 			</tr>
 			<tr>
 				<td title="Computer Networks">CPSC 441</td>
-				<td title="Introduction to Computability">CPSC 313</td>
-				<td title=""></td>
-				<td title=""></td>
+				<td title="Software Performance Evaluation">SENG 533</td>
 			</tr>
 			<tr>
 				<td title="Philosophy of Logic">PHIL 473</td>
-				<td title="Logic II">PHIL 379</td>
-				<td title=""></td>
-				<td title=""></td>
+				<td title="Introduction to Computability">CPSC 313</td>
 			</tr>
 		</tbody>
 	</table>
@@ -190,8 +181,29 @@
 				<th>SUMMER 2019</th>
 			</tr>
 			<tr>
+				<td title="Internship in Engineering II" rowspan="5">INTE 513.02</td>
+				<td title="Internship in Engineering III" rowspan="5">INTE 513.03</td>
+				<td title="Internship in Engineering IV" colspan="2" rowspan="5">INTE 513.04</td>
+			</tr>
+		</tbody>
+	</table>
+	<hr>
+	<table>
+		<thead>
+			<tr>
+				<th colspan="4" class="tabletitle">Year 5 (2019 - 2020)</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<th>FALL 2019</th>
+				<th>WINTER 2020</th>
+				<th>SPRING 2020</th>
+				<th>SUMMER 2020</th>
+			</tr>
+			<tr>
 				<td title="Software Process and Project Management">SENG 511</td>
-				<td title="Software Performance Evaluation">SENG 533</td>
+				<td title="Design and Analysis of Algorithms I">CPSC 413</td>
 				<td title=""></td>
 				<td title=""></td>
 			</tr>
@@ -213,8 +225,8 @@
 				<td title=""></td>
 			</tr>
 			<tr>
-				<td title="">[Undecided elective]</td>
-				<td title=""></td>
+				<td title="">[Undecided Elective]</td>
+				<td title="">[Undecided Elective]</td>
 				<td title=""></td>
 				<td title=""></td>
 			</tr>
