--- a/HTML/about.html
+++ b/HTML/about.html
@@ -67,6 +67,13 @@
 		<i>C.G. Jung</i>
 	</p>
 	<p id="quote">
+		"People want to be loved; failing that, admired; failing that, feared; failing that, hated and despised. They want to evoke some sort of sentiment. The soul shudders before oblivion and seeks connection at any price."
+		<br>
+		<i>Doctor Glas ~ Hjalmar Söderberg</i>
+	</p>
+	<!--
+		REMOVED QUOTES
+		<p id="quote">
 		"No, it's impossible. It's impossible to tell anyone what it feels like to be you. It's impossible. We live the same way that we dream - alone."
 		<br>
 		<i>Heart of Darkness ~ Joseph Conrad</i>
@@ -80,11 +87,6 @@
 		<i>Peter Pan ~ J.M. Barrie</i>
 	</p>
 	<p id="quote">
-		"People want to be loved; failing that, admired; failing that, feared; failing that, hated and despised. They want to evoke some sort of sentiment. The soul shudders before oblivion and seeks connection at any price."
-		<br>
-		<i>Doctor Glas ~ Hjalmar Söderberg</i>
-	</p>
-	<p id="quote">
 		"Perhaps it's impossible to wear an identity without becoming what you pretend to be."
 		<br>
 		<i>Ender's Game ~ Orson Scott Card</i>
@@ -94,6 +96,7 @@
 		<br>
 		<i>Francis Bacon</i>
 	</p>
+	-->
 	<hr>
 	<p id="backtotop"><a href="#top">Back to Top</a></p>
 </body>
