--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -7,6 +7,8 @@
 	<link href="../CSS/projects.css" type="text/css" rel="stylesheet"/>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32"/>
+	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-16x16.png" sizes="16x16"/>
 </head>
 <body>
 	<header>
