--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,46 +1,65 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Brian Pho</title>
-	<meta name="DESCRIPTION" content="This is the homepage of Brian Pho."/>
-	<meta name="KEYWORDS" content="Brian Pho"/>
-	<link href="../CSS/base.css" type="text/css" rel="stylesheet"/>
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32"/>
-	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-16x16.png" sizes="16x16"/>
-</head>
-<body>
-	<header>
-		<h1 id="name">Brian Pho</h1>
-		<nav>
-			<ul>
-				<!-- Linking using relative URL -->
-				<li><a id="home" class="on" href="index.html">Home</a></li>
-				<li><a id="courses" href="courses.html">Courses</a></li>
-				<li><a id="projects" href="projects.html">Projects</a></li>
-				<li><a id="gallery" href="gallery.html">Gallery</a></li>
-				<li><a id="about" href="about.html">About</a></li>
-				<li><a id="contact" href="contact.html">Contact</a></li>
-			</ul>
-		</nav>
-	</header>
-	<h1>Welcome to Brian Pho's Homepage</h1>
-	<p>
-		Hello, I am a 3<sup>rd</sup> year software engineering student at the University of Calgary.
-		This website shows the courses I have taken, projects I have been involved with, and information
-		about me.
-	</p>
-	<hr>
-	<p>
-		This website is currently hosted using Github Pages. Last Updated Jan 14, 2018.
-	</p>
-</body>
+<!doctype html>
+<html lang="en">
+	<head>
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<link href="../CSS/custom.css" rel="stylesheet">
+		<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32"/>
+		<title>Home</title>
+		<meta name="DESCRIPTION" content="This is the homepage of Brian Pho."/>
+		<meta name="KEYWORDS" content="Brian Pho, homepage"/>
+	</head>
+	<body>
+		<header>
+			<nav class="navbar fixed-top navbar-expand-lg navbar-light">
+				<a class="navbar-brand" href="index.html">
+					<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top" alt="">
+					Brian Pho
+				</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+					<ul class="navbar-nav">
+						<li class="nav-item active">
+							<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="courses.html">Courses</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="projects.html">Projects</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="gallery.html">Gallery</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="about.html">About</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="contact.html">Contact</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+		</header>
+		<div class="container text-left">
+			<h1 class="text-center">Welcome to Brian Pho's Homepage</h1>
+			<p>
+				Hello, I am a 3<sup>rd</sup> year software engineering student at the University of Calgary.
+				This website shows the courses I have taken, projects I have been involved in, and information
+				about me.
+			</p>
+			<hr>
+			<p>
+				This website is built using Bootstrap 4 and is currently hosted using Github Pages. Last Updated Feb 6, 2018.
+			</p>
+		</div>
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	</body>
 </html>
-
-<!-- Useful links for future reference
-	https://fonts.google.com/
-	https://www.w3schools.com/html/default.asp
-	http://www.htmldog.com/guides/css/intermediate/classid/
-	https://github.com/TimeTravel-1/Website
--->
