Updated 404 To be Useful

--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>Page Not Found</title>
+	<title>404 - Page Not Found</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style>
 	* {
@@ -33,5 +33,7 @@
 	<h1>Oh Noes!</h1>
 	<h2>Error 404: Page Not Found</h2>
 	<p>The page you tried to view does not exist.</p>
+	<br>
+	<a href="index.html"><h2>Return to Homepage</h2></a>
 </body>
 </html>
