--- a/HTML/about.html
+++ b/HTML/about.html
@@ -96,7 +96,7 @@
 		</p>
 		<p>
 			"Loneliness does not come from having no people about one, but from being unable to communicate the things that seem important to oneself, or from holding certain views which others find inadmissible."
-		<footer class="blockquote-footer">C.G. Jung in <cite title="Source Title">Memories Dreams and Reflections</cite></footer>
+		<footer class="blockquote-footer">Carl Jung in <cite title="Source Title">Memories Dreams and Reflections</cite></footer>
 	</p>
 	<p>
 		"People want to be loved; failing that, admired; failing that, feared; failing that, hated and despised. They want to evoke some sort of sentiment. The soul shudders before oblivion and seeks connection at any price."
