--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link href="../CSS/custom.css" rel="stylesheet">
 		<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32"/>
-		<title>Gallery</title>
+		<title>Contact</title>
 		<meta name="DESCRIPTION" content="This is information on how to contact Brian Pho."/>
 		<meta name="KEYWORDS" content="Brian Pho, contact"/>
 	</head>
