Test to see if Courses Page on Mobile is Fixed

--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -259,8 +259,8 @@
 						<td title=""></td>
 					</tr>
 					<tr>
-						<td title="">[Undecided Elective]</td>
-						<td title="">[Undecided Elective]</td>
+						<td title="">[Elective]</td>
+						<td title="">[Elective]</td>
 						<td title=""></td>
 						<td title=""></td>
 					</tr>
