Made Gallery Pictures Clickable

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -47,7 +47,7 @@
 			</nav>
 		</header>
 		<div class="container text-center">
-			<h1>About Me</h1>
+			<h1 class="display-4">About Me</h1>
 			<blockquote class="blockquote">
 				<p>"The unexamined life is not worth living."</p>
 			<footer class="blockquote-footer">Socrates</footer>
@@ -108,7 +108,7 @@
 </p>
 </blockquote>
 <hr>
-			<p class="text-center"><a href="#top">Back to Top</a></p>
+			<p class="text-center"><a href="#top" class="btn btn-outline-info">Back to Top</a></p>
 </div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
