--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -47,22 +47,24 @@
 			</nav>
 		</header>
 		<div class="container text-center">
-			<h1>Courses Taken</h1>
-			<p>
-				I am currently taking a bachelors of science with a major in software engineering.
-				At the University of Calgary, the semesters run as follows.
-				<div class="mx-auto text-left">
-					<ul>
-						<li>FALL: Sept - Dec (4 months)</li>
-						<li>WINTER: Jan - Apr (4 months)</li>
-						<li>SPRING: May - June (2 months)</li>
-						<li>SUMMER: July - Aug (2 months)</li>
-					</ul>
-				The current software engineering curriculum and course descriptions can be found
-				<a href="https://www.ucalgary.ca/pubs/calendar/current/en-4-9.html"> here</a>.
-				Hover over a course to view its title.
-				</div>
-			</p>
+			<h1 class="display-4">Courses Taken</h1>
+			<div class=" lead text-left">
+				<p>
+					I am currently taking a bachelors of science with a major in software engineering.
+					At the University of Calgary, the semesters run as follows.
+					<div class="mx-auto">
+						<ul>
+							<li>FALL: Sept - Dec (4 months)</li>
+							<li>WINTER: Jan - Apr (4 months)</li>
+							<li>SPRING: May - June (2 months)</li>
+							<li>SUMMER: July - Aug (2 months)</li>
+						</ul>
+					</div>
+					The current software engineering curriculum and course descriptions can be found
+					<a href="https://www.ucalgary.ca/pubs/calendar/current/en-4-9.html"> here</a>.
+					Hover over a course to view its title.
+				</p>
+			</div>
 			<hr>
 			<table class="table table-bordered table-hover">
 				<thead>
@@ -267,7 +269,7 @@
 				</tbody>
 			</table>
 			<hr>
-			<p class="text-center"><a href="#top">Back to Top</a></p>
+			<p class="text-center"><a href="#top" class="btn btn-outline-info">Back to Top</a></p>
 		</div>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
