--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -47,20 +47,113 @@
 			</nav>
 		</header>
 		<div class="container text-center">
-			<h1>Gallery</h1>
-			​<picture>
-				<a href="../Images/BrianPho/brianpho1.jpg"><img style="max-height:550px" src="../Images/BrianPho/brianpho1.jpg" class="img-fluid pb-1" alt="A picture of me"/></a>
-				<a href="../Images/BrianPho/brianpho2.jpg"><img style="max-height:550px" src="../Images/BrianPho/brianpho2.jpg" class="img-fluid pb-1" alt="A picture of me"/></a>
-				<a href="../Images/BrianPho/brianpho3.jpg"><img style="max-height:550px" src="../Images/BrianPho/brianpho3.jpg" class="img-fluid pb-1" alt="A picture of me"/></a>
-				<a href="../Images/BrianPho/brianpho4.jpg"><img style="max-height:550px" src="../Images/BrianPho/brianpho4.jpg" class="img-fluid pb-1" alt="A picture of me"/></a>
-				<a href="../Images/BrianPho/brianpho5.jpg"><img style="max-height:550px" src="../Images/BrianPho/brianpho5.jpg" class="img-fluid pb-1" alt="A picture of me"/></a>
-				<a href="../Images/BrianPho/brianpho6.jpg"><img style="max-height:550px" src="../Images/BrianPho/brianpho6.jpg" class="img-fluid pb-1" alt="A picture of me"/></a>
-			</picture>
+			<h1 class="display-4">Gallery</h1>
+			<p class="lead">
+				The pictures are clickable.
+			</p>
 			<hr>
-			<p class="text-center"><a href="#top">Back to Top</a></p>
-		</div>
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-	</body>
-</html>
+			​<picture>
+				<img style="max-height:550px" src="../Images/BrianPho/brianpho1.jpg" class="img-fluid pb-1" data-toggle="modal" data-target="#brianpho1" alt="A picture of me"/>
+				<div class="modal fade" id="brianpho1" tabindex="-1" role="dialog" aria-hidden="true">
+					<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+						<div class="modal-content">
+							<div class="modal-body">
+								<figure class="figure">
+									<img src="../Images/BrianPho/brianpho1.jpg" class="img-fluid" alt="A picture of me">
+									<figcaption class="figure-caption">Portrait in Bedroom</figcaption>
+								</figure>
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<img style="max-height:550px" src="../Images/BrianPho/brianpho2.jpg" class="img-fluid pb-1" data-toggle="modal" data-target="#brianpho2" alt="A picture of me"/>
+				<div class="modal fade" id="brianpho2" tabindex="-1" role="dialog" aria-hidden="true">
+					<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+						<div class="modal-content">
+							<div class="modal-body">
+								<figure class="figure">
+									<img src="../Images/BrianPho/brianpho2.jpg" class="img-fluid" alt="A picture of me">
+									<figcaption class="figure-caption">Bowness Park BBQ</figcaption>
+								</figure>
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<img style="max-height:550px" src="../Images/BrianPho/brianpho3.jpg" class="img-fluid pb-1" data-toggle="modal" data-target="#brianpho3" alt="A picture of me"/>
+				<div class="modal fade" id="brianpho3" tabindex="-1" role="dialog" aria-hidden="true">
+					<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+						<div class="modal-content">
+							<div class="modal-body">
+								<figure class="figure">
+									<img src="../Images/BrianPho/brianpho3.jpg" class="img-fluid" alt="A picture of me">
+									<figcaption class="figure-caption">High School Graduation</figcaption>
+								</figure>
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<img style="max-height:550px" src="../Images/BrianPho/brianpho4.jpg" class="img-fluid pb-1" data-toggle="modal" data-target="#brianpho4" alt="A picture of me"/>
+				<div class="modal fade" id="brianpho4" tabindex="-1" role="dialog" aria-hidden="true">
+					<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+						<div class="modal-content">
+							<div class="modal-body">
+								<figure class="figure">
+									<img src="../Images/BrianPho/brianpho4.jpg" class="img-fluid" alt="A picture of me">
+									<figcaption class="figure-caption">University Station</figcaption>
+								</figure>
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<img style="max-height:550px" src="../Images/BrianPho/brianpho5.jpg" class="img-fluid pb-1" data-toggle="modal" data-target="#brianpho5" alt="A picture of me"/>
+				<div class="modal fade" id="brianpho5" tabindex="-1" role="dialog" aria-hidden="true">
+					<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+						<div class="modal-content">
+							<div class="modal-body">
+								<figure class="figure">
+									<img src="../Images/BrianPho/brianpho5.jpg" class="img-fluid" alt="A picture of me">
+									<figcaption class="figure-caption">Body Image</figcaption>
+								</figure>
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<img style="max-height:550px" src="../Images/BrianPho/brianpho6.jpg" class="img-fluid pb-1" data-toggle="modal" data-target="#brianpho6" alt="A picture of me"/>
+				<div class="modal fade" id="brianpho6" tabindex="-1" role="dialog" aria-hidden="true">
+					<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+						<div class="modal-content">
+							<div class="modal-body">
+								<figure class="figure">
+									<img src="../Images/BrianPho/brianpho6.jpg" class="img-fluid" alt="A picture of me">
+									<figcaption class="figure-caption">Scientist Brian</figcaption>
+								</figure>								</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</picture>
+				<hr>
+				<p class="text-center"><a href="#top" class="btn btn-outline-info">Back to Top</a></p>
+			</div>
+			<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+		</body>
+	</html>
