--- a/HTML/index.html
+++ b/HTML/index.html
@@ -47,14 +47,14 @@
 			</nav>
 		</header>
 		<div class="container text-left">
-			<h1 class="text-center">Welcome to Brian Pho's Homepage</h1>
-			<p>
+			<h1 class="text-center display-4">Welcome to Brian Pho's Homepage</h1>
+			<p class="lead">
 				Hello, I am a 3<sup>rd</sup> year software engineering student at the University of Calgary.
 				This website shows the courses I have taken, projects I have been involved in, and information
 				about me.
 			</p>
 			<hr>
-			<p>
+			<p class="small">
 				This website is built using Bootstrap 4 and is currently hosted using Github Pages. Last Updated Feb 6, 2018.
 			</p>
 		</div>
