--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -47,8 +47,8 @@
 			</nav>
 		</header>
 		<div class="container text-left">
-			<h1 class="text-center">Projects</h1>
-			<p>
+			<h1 class="text-center display-4">Projects</h1>
+			<p class="lead">
 				The following are projects that I have been involved in. The list is ordered with the most recent project
 				at the top. Most of the projects have been a part of school but this website is a personal endeavor. My GitHub can be found
 				<a href="https://github.com/Brian-Pho"> here</a>.
@@ -57,7 +57,7 @@
 			<!-- Find additional project colors here: http://hslpicker.com/#ede2fd -->
 			<div class="container pl-5 pr-5 pb-4" style="background-color: #fde2e2;">
 				<h2 class="text-center pt-4">ENSF 480: Bug Tracking System (Nov 2017)</h2>
-				<p><a href="https://github.com/Brian-Pho/ENSF480_Bug-Tracking-System">Source Code</a></p>
+				<p><a href="https://github.com/Brian-Pho/ENSF480_Bug-Tracking-System" class="btn btn-outline-primary">Source Code</a></p>
 				<p>
 					This project was done in a group of three where the goal was to create a bug tracking system using a software engineering
 					design methodology. Due to the nature of being in school, we only had time to do a simple linear development process which has
@@ -89,7 +89,7 @@
 			<hr>
 			<div class="container pl-5 pr-5 pb-4" style="background-color: #fdece2;">
 				<h2 class="text-center pt-4">Personal: Github Pages Website (July 2017)</h2>
-				<p><a href="https://github.com/Brian-Pho/Brian-Pho.github.io">Source Code</a></p>
+				<p><a href="https://github.com/Brian-Pho/Brian-Pho.github.io" class="btn btn-outline-primary">Source Code</a></p>
 				<p>
 					This website, the one you're reading this on, is a personal project of mine that I
 					made from scratch over my summer break. I wanted to make a website for multiple reasons. The first reason was
@@ -115,7 +115,7 @@
 			<hr>
 			<div class="container pl-5 pr-5 pb-4" style="background-color: #fdf9e2;">
 				<h2 class="text-center pt-4">CPSC 471: Library Database Management System (June 2017)</h2>
-				<p><a href="https://github.com/Brian-Pho/CPSC471_Library-App">Source Code</a></p>
+				<p><a href="https://github.com/Brian-Pho/CPSC471_Library-App" class="btn btn-outline-primary">Source Code</a></p>
 				<p>
 					While this project was part of my database class, it can be thought of as
 					a continuation and combination of my last two projects. This project was
@@ -147,7 +147,7 @@
 			<hr>
 			<div class="container pl-5 pr-5 pb-4" style="background-color: #e2fde8;">
 				<h2 class="text-center pt-4">ENSF 409: Airlines Registration (April 2017)</h2>
-				<p><a href="https://github.com/Brian-Pho/ENSF409_Airlines-Registration-System">Source Code</a></p>
+				<p><a href="https://github.com/Brian-Pho/ENSF409_Airlines-Registration-System" class="btn btn-outline-primary">Source Code</a></p>
 				<p>
 					This was my first project that involved the use of a database (mySQL). This project was
 					done in a group of three where I had the role of designing the UI for
@@ -169,7 +169,7 @@
 			<hr>
 			<div class="container pl-5 pr-5 pb-4" style="background-color: #e3f2fd;">
 				<h2 class="text-center pt-4">ENSF 409: Calculator Android App (March 2017)</h2>
-				<p><a href="https://github.com/Brian-Pho/ENSF409_Calculator">Source Code</a></p>
+				<p><a href="https://github.com/Brian-Pho/ENSF409_Calculator" class="btn btn-outline-primary">Source Code</a></p>
 				<p>
 					A generic calculator app for Android. This was my first experience working
 					with Android Studio and Java. There were many small quirks that we had to
@@ -185,7 +185,7 @@
 			<hr>
 			<div class="container pl-5 pr-5 pb-4" style="background-color: #e4e2fd;">
 				<h2 class="text-center pt-4">ENGG 233: Ring Runner Game (December 2015)</h2>
-				<p><a href="https://github.com/Brian-Pho/ENGG233_Ring-Runner-Game">Source Code</a></p>
+				<p><a href="https://github.com/Brian-Pho/ENGG233_Ring-Runner-Game" class="btn btn-outline-primary">Source Code</a></p>
 				<p>
 					My first major project after taking my first programming course.
 					The project I chose to do was an original game programmed in
@@ -202,7 +202,7 @@
 				</figure>
 			</div>
 			<hr>
-			<p class="text-center"><a href="#top">Back to Top</a></p>
+			<p class="text-center"><a href="#top" class="btn btn-outline-info">Back to Top</a></p>
 		</div>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
