--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -47,7 +47,7 @@
 			</nav>
 		</header>
 		<div class="container text-center">
-			<h1>Contact</h1>
+			<h1 class="display-4">Contact</h1>
 			<p>
 				<a href="https://www.facebook.com/BrianPho7">Facebook</a><br>
 				<a href="https://www.linkedin.com/in/brian-pho">LinkedIn</a><br>
