--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -49,10 +49,10 @@
 		<div class="container text-center">
 			<h1 class="display-4">Contact</h1>
 			<p>
-				<a href="https://www.facebook.com/BrianPho7">Facebook</a><br>
-				<a href="https://www.linkedin.com/in/brian-pho">LinkedIn</a><br>
-				<a href="https://github.com/Brian-Pho/">Github</a><br>
-				<a href="mailto:brian.pho@ucalgary.ca">Email</a> (brian.pho@ucalgary.ca)<br>
+				<a href="https://www.facebook.com/BrianPho7" class="btn btn-outline-primary" role="button">Facebook</a>
+				<a href="https://www.linkedin.com/in/brian-pho" class="btn btn-outline-primary" role="button">LinkedIn</a>
+				<a href="https://github.com/Brian-Pho/" class="btn btn-outline-primary" role="button">Github</a>
+				<a href="mailto:brian.pho@ucalgary.ca" class="btn btn-outline-primary" role="button">Email (brian.pho@ucalgary.ca)</a>
 			</p>
 		</div>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
