--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -261,8 +261,8 @@
 						<td title=""></td>
 					</tr>
 					<tr>
-						<td title="">[Elective]</td>
-						<td title="">[Elective]</td>
+						<td title="Undecided Elective">[Elective]</td>
+						<td title="Undecided Elective">[Elective]</td>
 						<td title=""></td>
 						<td title=""></td>
 					</tr>
