--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -64,7 +64,7 @@
 								</figure>
 							</div>
 							<div class="modal-footer">
-								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+								<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
 							</div>
 						</div>
 					</div>
@@ -80,7 +80,7 @@
 								</figure>
 							</div>
 							<div class="modal-footer">
-								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+								<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
 							</div>
 						</div>
 					</div>
@@ -96,7 +96,7 @@
 								</figure>
 							</div>
 							<div class="modal-footer">
-								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+								<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
 							</div>
 						</div>
 					</div>
@@ -112,7 +112,7 @@
 								</figure>
 							</div>
 							<div class="modal-footer">
-								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+								<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
 							</div>
 						</div>
 					</div>
@@ -128,7 +128,7 @@
 								</figure>
 							</div>
 							<div class="modal-footer">
-								<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+								<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
 							</div>
 						</div>
 					</div>
@@ -143,7 +143,7 @@
 									<figcaption class="figure-caption">Scientist Brian</figcaption>
 								</figure>								</div>
 								<div class="modal-footer">
-									<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+									<button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
 								</div>
 							</div>
 						</div>
