--- a/HTML/index.html
+++ b/HTML/index.html
@@ -55,7 +55,7 @@
 			</p>
 			<hr>
 			<p class="small">
-				This website is built using Bootstrap 4 and is currently hosted using Github Pages. Last Updated Feb 6, 2018.
+				This website is built using <a href="https://getbootstrap.com/">Bootstrap 4</a> and is currently hosted using <a href="https://pages.github.com/">Github Pages.</a> Last Updated Feb 6, 2018.
 			</p>
 		</div>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
