--- a/HTML/index.html
+++ b/HTML/index.html
@@ -22,7 +22,7 @@
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 				</button>
-				<div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item active">
 							<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
@@ -46,18 +46,20 @@
 				</div>
 			</nav>
 		</header>
-		<div class="container text-left">
-			<h1 class="text-center display-4">Welcome to Brian Pho's Homepage</h1>
+		<div class="container text-center">
+			<h1 class="display-4">Welcome to Brian Pho's Homepage</h1>
 			<p class="lead">
 				Hello, I am a 3<sup>rd</sup> year software engineering student at the University of Calgary.
 				This website shows the courses I have taken, projects I have been involved in, and information
 				about me.
 			</p>
 			<hr>
-			<p class="small">
+		</div>
+		<footer>
+			<p class="small text-center">
 				This website is built using <a href="https://getbootstrap.com/">Bootstrap 4</a> and is currently hosted using <a href="https://pages.github.com/">Github Pages.</a> Last Updated Feb 6, 2018.
 			</p>
-		</div>
+		</footer>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
