--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -6,6 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<!-- Font Awesome JS -->
+		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 		<link href="../CSS/custom.css" rel="stylesheet">
 		<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32"/>
 		<title>Contact</title>
@@ -22,7 +24,7 @@
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 				</button>
-				<div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item">
 							<a class="nav-link" href="index.html">Home</a>
@@ -46,14 +48,18 @@
 				</div>
 			</nav>
 		</header>
-		<div class="container text-center">
-			<h1 class="display-4">Contact</h1>
-			<p>
-				<a href="https://www.facebook.com/BrianPho7" class="btn btn-outline-primary" role="button">Facebook</a>
-				<a href="https://www.linkedin.com/in/brian-pho" class="btn btn-outline-primary" role="button">LinkedIn</a>
-				<a href="https://github.com/Brian-Pho/" class="btn btn-outline-primary" role="button">Github</a>
-				<a href="mailto:brian.pho@ucalgary.ca" class="btn btn-outline-primary" role="button">Email (brian.pho@ucalgary.ca)</a>
+		<div class="container">
+			<h1 class="display-4 text-center">Contact</h1>
+			<p class="lead text-center">
+				Say hello.
 			</p>
+			<hr>
+			<div class="text-center">
+				<a class="pr-1 pl-1" href="https://www.facebook.com/BrianPho7"><i class="fab fa-facebook fa-2x" style="color: black"></i></a>
+				<a class="pr-1 pl-1" href="https://www.linkedin.com/in/brian-pho"><i class="fab fa-linkedin fa-2x" style="color: black"></i></a>
+				<a class="pr-1 pl-1" href="https://github.com/Brian-Pho/"><i class="fab fa-github-square fa-2x" style="color: black"></i></a>
+				<a class="pr-1 pl-1" href="mailto:brian.pho@ucalgary.ca"><i class="fas fa-envelope-square fa-2x" style="color: black"></i></a>
+			</div>
 		</div>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
