--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<header>
-			<nav class="navbar fixed-top navbar-expand-lg navbar-light">
+			<nav class="navbar fixed-top navbar-expand-lg navbar-light nav1">
 				<a class="navbar-brand" href="index.html">
 					<img src="../Images/Favicon/favicon-32x32.png" width="30" height="30" class="d-inline-block align-top" alt="">
 					Brian Pho
@@ -22,7 +22,7 @@
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 				</button>
-				<div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+				<div class="collapse navbar-collapse" id="navbarNav">
 					<ul class="navbar-nav">
 						<li class="nav-item">
 							<a class="nav-link" href="index.html">Home</a>
@@ -88,7 +88,7 @@
 			</div>
 			<hr>
 			<div class="container pl-5 pr-5 pb-4" style="background-color: #fdece2;">
-				<h2 class="text-center pt-4">Personal: Github Pages Website (July 2017)</h2>
+				<h2 class="text-center pt-4">Personal: Website (July 2017)</h2>
 				<p><a href="https://github.com/Brian-Pho/Brian-Pho.github.io" class="btn btn-outline-primary">Source Code</a></p>
 				<p>
 					This website, the one you're reading this on, is a personal project of mine that I
@@ -202,10 +202,11 @@
 				</figure>
 			</div>
 			<hr>
-			<p class="text-center"><a href="#top" class="btn btn-outline-info">Back to Top</a></p>
-		</div>
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-	</body>
-</html>
+			<footer>
+				<p class="text-center"><a href="#top" class="btn btn-outline-info">Back to Top</a></p>
+			</footer>
+			<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+		</body>
+	</html>
