Added next page to Contact form

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -54,10 +54,6 @@
 				Say hello.
 			</p>
 			<hr>
-			<!--
-			<div class="alert alert-success"><strong><span class="glyphicon glyphicon-send"></span> Success! Message sent. (If form ok!)</strong></div>
-			<div class="alert alert-danger"><span class="glyphicon glyphicon-alert"></span><strong> Error! Please check the inputs. (If form error!)</strong></div>
-			-->
 			<div class="alert alert-success alert-dismissible fade show" role="alert" hidden>
 				Success! Message sent.
 				<button type="button" class="close" aria-label="Close">
@@ -66,30 +62,8 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-6 mx-auto">
-					<!--
-					<form action="https://formspree.io/brainic777@gmail.com" method="POST">
-										<input type="hidden" name="_next" value="//site.io/thanks.html"/>
-						-->
-						<!--
-							<input type="hidden" name="_subject" value="Message from brianpho.com"/>
-							<input type="text" name="_gotcha" style="display:none"/>
-							<div class="form-group">
-												<label for="InputName">Your Name</label>
-												<input type="text" class="form-control" name="Sender Name" placeholder="Enter Name" required>
-							</div>
-							<div class="form-group">
-												<label for="InputEmail">Your Email</label>
-												<input type="email" class="form-control" name="Sender Email" placeholder="Enter Email" required>
-							</div>
-							<div class="form-group">
-												<label for="InputMessage">Message</label>
-												<textarea name="Message" class="form-control" rows="5" placeholder="Hey is for horses." required></textarea>
-							</div>
-							<button type="submit" class="btn btn-outline-primary" id="btn">Submit</button>
-					</form>
-					-->
 					<form action="https://formspree.io/brainic777@gmail.com" method="POST" class="needs-validation" novalidate>
-						<!--<input type="hidden" name="_next" value="//site.io/thanks.html"/>-->
+						<input type="hidden" name="_next" value="www.brianpho.com/HTML/contact.html"/>
 						<input type="hidden" name="_subject" value="Message from brianpho.com"/>
 						<input type="text" name="_gotcha" style="display:none"/>
 						<div class="form-group">
